--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -43,18 +43,18 @@
     </li>
       <% end %>
     </ul>
-        <!--<form class="form-inline my-2 my-lg-0">
+        <form class="form-inline my-2 my-lg-0">
           <input class="form-control mr-sm-2" type="text" placeholder="Search">
           <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
-        </form> -->
+        </form> 
         
       </div>
     </nav>
-       <% if notice.present? %>
-      <p class="alert alert-info"><%= notice %></p>
+     % if notice.present? %>
+  <p class="alert alert-info"><%= notice %></p>
 <% end %>
-      <% if alert.present? %>
-      <p class="alert alert-danger"><%= alert %></p>
+<% if alert.present? %>
+  <p class="alert alert-danger"><%= alert %></p>
 <% end %>
     <%= yield %>
   </body>
